# time-jutsu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
installer/: time-jutsu.iss
installer/linux/: build-appimage-container.sh  build-appimage.sh  install.sh  time-jutsu.desktop
src/: app.rs  i18n.rs  main.rs
src/core/: alarm.rs  countdown.rs  deadline.rs  mod.rs  pomodoro.rs  scheduler.rs  stopwatch.rs  tracking.rs
src/ui/: mod.rs  sidebar.rs  tab_about.rs  tab_alarm.rs  tab_dashboard.rs  tab_pomodoro.rs  tab_scheduler.rs  tab_settings.rs  tab_timer.rs  tab_tracking.rs  theme.rs
src/utils/: config.rs  mod.rs  notifier.rs  platform.rs  sound.rs  tray.rs
