[package]
name = "time-jutsu"
version = "0.1.5"
edition = "2021"
description = "Master your time. Strike with precision."

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui-phosphor = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
notify-rust = "4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

# Linux: D-Bus untuk deteksi host tray & idle monitor (StatusNotifierWatcher,
# Mutter/ScreenSaver), libc untuk flock single-instance. Portabel lintas-distro.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
