[package]
name = "time-jutsu"
version = "0.1.5"
edition = "2021"
description = "Master your time. Strike with precision."
license = "MIT"
repository = "https://github.com/s4rt4/time-jutsu"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui-phosphor = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
notify-rust = "4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

# Linux: D-Bus untuk deteksi host tray & idle monitor (StatusNotifierWatcher,
# Mutter/ScreenSaver), libc untuk flock single-instance. Portabel lintas-distro.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Paket .rpm dibangun via `cargo generate-rpm` (baca binary di target/release).
# Dependensi runtime (libasound, gtk3, appindicator, xdo, dbus) dideteksi
# otomatis dari .so yang di-link → dnf resolve ke paket distro yang sesuai.
[package.metadata.generate-rpm]
summary = "Desktop productivity app — Pomodoro, timer, time tracking, scheduler."
assets = [
    { source = "target/release/time-jutsu", dest = "/usr/bin/time-jutsu", mode = "755" },
    { source = "installer/linux/time-jutsu.desktop", dest = "/usr/share/applications/time-jutsu.desktop", mode = "644" },
    { source = "assets/logo-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/time-jutsu.png", mode = "644" },
    { source = "assets/logo-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/time-jutsu.png", mode = "644" },
    { source = "assets/logo-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/time-jutsu.png", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/time-jutsu/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/time-jutsu/README.md", mode = "644", doc = true },
]

# libappindicator hanya terpakai saat ada host system-tray (di-load opsional,
# bukan NEEDED). Weak-dep: ikut terpasang di distro yang menyediakannya, tak
# memblokir yang tidak (app tetap jalan & tampil di dock).
[package.metadata.generate-rpm.recommends]
"libappindicator3.so.1()(64bit)" = "*"
